--- a/package.json
+++ b/package.json
@@ -14,11 +14,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "import-maps": "node convert-world-data.js",
-    "copy-data": "node copy-gamedata.js",
-    "fix-data": "node fix-gamedata-location.js",
-    "setup": "node copy-gamedata.js && npm start"
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
